TS-149 Fixed styles

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -10021,6 +10021,9 @@ form [type="submit"],
         width: 1072px;
         display: flex;
     }
+    .services-tree .prod_container .single {
+        width: 50%;
+    }
 }
 @media screen and (max-width:1200px) {
 
