TS-149 Fixed styles

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -10054,6 +10054,9 @@ form [type="submit"],
         display: flex;
         width: 1240px;
     }
+    .services-tree .prod_container .single {
+        width: 50%;
+    }
     
 }
 
