--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -4228,8 +4228,8 @@ form [type="file"] {
 }
 
 .shelf-content {
-    padding-left: 360px;
-    padding-right: calc(40vw - 360px)
+    /* padding-left: 360px;
+    padding-right: calc(40vw - 360px) */
 }
 
 .slider-container {
@@ -9699,8 +9699,11 @@ form [type="submit"],
 
 .services-tree .prod_container {
     display: block;
-    padding-top: 60px;
+    /* padding-top: 60px; */
 }
+#cards-tree.shelf-content .H3 {
+    padding-bottom: 60px;
+} 
 
 .services-tree .prod_container .single {
     display: inline-flex;
@@ -9776,6 +9779,16 @@ form [type="submit"],
     .services-tree .prod_container {
         padding: 0 32px;
     }
+
+    .services-tree .prod_container .single {
+        padding-bottom: 40px;
+    }
+}
+@media screen and (min-width:701px) {
+
+    .services-tree .prod_container .single {
+        padding-bottom: 60px;
+    }
 }
 @media screen and (min-width:701px) {
 
@@ -9800,10 +9813,6 @@ form [type="submit"],
 
     #planets_mobile {
         display: none;
-    }
-    .services-tree .prod_container .single .img img{
-        width: 200px;
-        height: 200px;
     }
 }
 @media screen and (max-width:768px) {
@@ -9921,21 +9930,46 @@ form [type="submit"],
         padding-inline: 32px;
         width: 100%;
     }
-
-    .services-tree .prod_container .single {
-        padding-bottom: 32px;
-    }
 }
 
 
-@media screen and (min-width:701px) and (max-width:768px) {
+@media screen and (min-width:701px) and (max-width:820px) {
+    .services-tree .prod_container {
+        width: 660px;
+    }
+}
+@media screen and (min-width:821px) and (max-width:960px) {
+    .services-tree .prod_container {
+        width: 780px;
+    }
+}
+@media screen and (min-width:961px) and (max-width:1024px) {
+    .services-tree .prod_container {
+        width: 860px;
+    }
+}
+@media screen and (min-width:1025px) and (max-width:1200px) {
+    .services-tree .prod_container {
+        width: 980px;
+    }
+}
+@media screen and (min-width:1201px) and (max-width:1440px) {
+    .services-tree .prod_container {
+        width: 1090px;
+    }
+}
+@media screen and (min-width:1400px) {
+    .services-tree .prod_container {
+        width: 1240px;
+    }
+}
+@media screen and (min-width:701px) and (max-width:1000px) {
     
     .services-tree .prod_container {
         padding: 0;
     }
     .services-tree .prod_container {
         display: flex;
-        width: 700px;
     }
 
     .services-tree .prod_container .single {
@@ -9978,28 +10012,32 @@ form [type="submit"],
         display: flex;
         width: 820px;
     }
-    .services-tree .prod_container {
-        width: 820px;
-    }
 
 }
 
-@media screen and (min-width:769px) and (max-width:1024px) {
+@media screen and (min-width:701px) and (max-width:1200px) {
+    .services-tree .prod_container .single .img img {
+        height: 140px;
+        width: 140px;
+    }
+}
+@media screen and (min-width:1201px) {
+    .services-tree .prod_container .single .img img{
+        width: 200px;
+        height: 200px;
+    }
+}
+@media screen and (min-width:1001px) and (max-width:1024px) {
     
     .services-tree .prod_container {
         padding: 0;
     }
     .services-tree .prod_container {
         display: flex;
-        width: 920px;
     }
 
     .services-tree .prod_container .single {
         width: 50%;
-    }
-    .services-tree .prod_container .single .img img {
-        height: 140px;
-        width: 140px;
     }
     .services-tree .prod_container .single .desc .main {
         font-size: 14px;
@@ -10019,7 +10057,6 @@ form [type="submit"],
 
 @media screen and (min-width: 1025px) and (max-width:1200px) {
     .services-tree .prod_container {
-        width: 1072px;
         display: flex;
     }
     .services-tree .prod_container .single {
@@ -10053,7 +10090,6 @@ form [type="submit"],
     .single-page-template .module-container,
     .services-tree .prod_container {
         display: flex;
-        width: 1240px;
     }
     .services-tree .prod_container .single {
         width: 50%;
