--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -9944,31 +9944,37 @@ form [type="submit"],
 
 
 @media screen and (min-width:701px) and (max-width:819px) {
+    .single-page-template .module-container,
     .services-tree .prod_container {
         width: 660px;
     }
 }
 @media screen and (min-width:820px) and (max-width:960px) {
+    .single-page-template .module-container,
     .services-tree .prod_container {
         width: 760px;
     }
 }
 @media screen and (min-width:961px) and (max-width:1024px) {
+    .single-page-template .module-container,
     .services-tree .prod_container {
         width: 860px;
     }
 }
 @media screen and (min-width:1025px) and (max-width:1200px) {
+    .single-page-template .module-container,
     .services-tree .prod_container {
         width: 980px;
     }
 }
 @media screen and (min-width:1201px) and (max-width:1440px) {
+    .single-page-template .module-container,
     .services-tree .prod_container {
         width: 1090px;
     }
 }
 @media screen and (min-width:1400px) {
+    .single-page-template .module-container,
     .services-tree .prod_container {
         width: 1240px;
     }
@@ -10014,10 +10020,6 @@ form [type="submit"],
         margin: 100px 60px 100px 100px;
     }
 
-    .single-page-template .module-container {
-        display: flex;
-        width: 820px;
-    }
 
 }
 
