Removed global markup bug fix

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -10263,8 +10263,8 @@ form [type="submit"],
         width: 640px;
     }
 
-    /* .services-tree .prod_container, */
-    .single-page-template .module-container{
+    .single-page-template .module-container,
+    .services-tree .prod_container {
         display: flex;
     }
     .services-tree .prod_container .single {
