[temp] Fixed global markup bug

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -10267,6 +10267,9 @@ form [type="submit"],
     .services-tree .prod_container {
         display: flex;
     }
+    .services-tree .prod_container.single-page-template {
+        display: block;
+    }
     .services-tree .prod_container .single {
         width: 50%;
     }
