[temp] Fixed global markup bug

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -10263,7 +10263,7 @@ form [type="submit"],
         width: 640px;
     }
 
-    .single-page-template .module-container,
+    /* .single-page-template .module-container, */
     .services-tree .prod_container {
         display: flex;
     }
