TS-266 Fixed styles

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -9659,9 +9659,11 @@ form [type="submit"],
         padding: 0 !important;
     }
     .blog-view .container .blog-content .module-container.type-head,
-    .blog-view .container .blog-content .module-container.type-paragraph,
     .blog-view .container .blog-content .H3 {
         padding: 0 32px;
+    }
+    .blog-view .container .blog-content .module-container.type-paragraph{
+        margin: 0 32px 12px;
     }
     .blog-view .container .blog-content .module-container.type-paragraph {
         margin-bottom: 12px !important;
