--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -10023,6 +10023,7 @@ form [type="submit"],
     margin: 0 auto;
 }
 .module-container.type-paragraph:nth-child(1),
+.module-container.type-paragraph:nth-child(4),
 .module-container.type-paragraph:nth-child(2),
 .module-container.type-paragraph:nth-child(3) {
     white-space: pre-line;
