TS-273 Fixed styles

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -10022,10 +10022,10 @@ form [type="submit"],
 .single-page-template .sub_parent_0 {
     margin: 0 auto;
 }
-.module-container.type-paragraph:nth-child(1),
-.module-container.type-paragraph:nth-child(4),
-.module-container.type-paragraph:nth-child(2),
-.module-container.type-paragraph:nth-child(3) {
+.module-container.type-paragraph:nth-child(1) p,
+.module-container.type-paragraph:nth-child(4) p,
+.module-container.type-paragraph:nth-child(2) p,
+.module-container.type-paragraph:nth-child(3) p {
     white-space: pre-line;
 }
 
