--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -10026,7 +10026,7 @@ form [type="submit"],
 .module-container.type-paragraph:nth-child(4),
 .module-container.type-paragraph:nth-child(2),
 .module-container.type-paragraph:nth-child(3) {
-    white-space: pre-line;
+    /* white-space: pre-line; */
 }
 
 @media screen and (min-width:701px) and (max-width:819px) {
