--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -10506,6 +10506,7 @@ form [type="submit"],
     margin-bottom: 12px;
     font-family: 'Commissioner', sans-serif;
     font-size: 16px;
+    color: #0A0D29;
 }
 
 .module-container.side-pad {
