TS-270 Fixed styles

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -9938,6 +9938,7 @@ form [type="submit"],
         font-weight: 600;
     }
 
+    .blog-side-bar,
     .main-menu .up .footer-links,
     .blog-view .container .blog-side-bar,
     #ind_wrap_large {
