TS-270 Fixed styles

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -9938,11 +9938,10 @@ form [type="submit"],
         font-weight: 600;
     }
 
-    .blog-side-bar,
     .main-menu .up .footer-links,
     .blog-view .container .blog-side-bar,
     #ind_wrap_large {
-        display: none;
+        display: none !important;
     }
 
     .blog-view .container .blog-content .H4 {
