TS-278 Fixed styles

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -2769,7 +2769,7 @@ a {
     background-color: var(--navy-green)
 }
 .bg-navy-green {
-    margin-bottom: 12px;
+    margin-bottom: 12px !important;
 }
 
 .fill-navy-green,
