--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -10902,7 +10902,7 @@ form [type="submit"],
 }
 
 @media(max-width:480px) {
-    .blog-view-mob .blog-content .H-mob {
+    .blog-content .H-mob {
         font-size: 30px;
         font-weight: 400;
         line-height: inherit;
