--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -10911,6 +10911,9 @@ form [type="submit"],
     .module-container .Body {
         padding: 0 32px;
     }
+    .module-container.padding .Body {
+        padding: 0;
+    }
     .module-container.type-block.padding {
         padding: 40px 20px;
     }
