TS-277 Fixed style bugs

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -10918,7 +10918,7 @@ form [type="submit"],
         padding: 40px 20px;
     }
 
-    .blog-view-mob .module-container.padding {
+    .module-container.padding {
         margin-left: 32px;
         margin-right: 32px
     }
