TS-280 Fixed bugs

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -6230,7 +6230,7 @@ header .root {
 }
 
 #products_swiper {
-    padding-bottom: 100px;
+    /* padding-bottom: 100px; */
 }
 
 .services-slider {
@@ -10145,10 +10145,10 @@ form [type="submit"],
 }
 @media screen and (min-width:1201px) {
     .services-slider .product-card {
-        margin: 100px 50px 100px 100px;
+        margin: 100px 50px 170px 100px;
     }
     .services-slider .product-card:nth-child(2) {
-        margin: 100px 50px 100px 50px;
+        margin: 100px 50px 170px 50px;
     }
     .slider-container .slider-side-bar p {
         font-size: 24px;
