--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -9884,6 +9884,9 @@ form [type="submit"],
     }
 }
 @media screen and (min-width:701px) {
+    .services-slider .product-card .product-title .H2 {
+        line-height: 90%;
+    }
     .services-title{
         display: none;
     }
@@ -10126,12 +10129,6 @@ form [type="submit"],
         margin-bottom: 0;
     }
 }
-@media screen and (min-width:701px) and (max-width:1000px) {
-
-    .services-slider .product-card .product-title .H2 {
-        line-height: 90%;
-    }
-}
 @media screen and (min-width:701px) and (max-width:999px) {
     .services-slider .product-card {
         margin: 182px 16px 245px 16px;
@@ -10142,7 +10139,7 @@ form [type="submit"],
 }
 @media screen and (min-width:1001px) and (max-width:1200px) {
     .services-slider .product-card {
-        margin: 182px 16px 111px 16px;
+        margin: 182px 16px 105px 16px;
     }
     .services-slider .product-card:nth-child(2) {
         margin: 182px 16px 0px 40px;
@@ -10150,7 +10147,7 @@ form [type="submit"],
 }
 @media screen and (min-width:1201px) {
     .services-slider .product-card {
-        margin: 100px 50px 170px 100px;
+        margin: 100px 50px 179px 100px;
     }
     .services-slider .product-card:nth-child(2) {
         margin: 100px 50px 0px 50px;
@@ -10272,7 +10269,11 @@ form [type="submit"],
     }
 }
 
-@media screen and (min-width:1200px) {
+@media screen and (min-width:1201px) and (max-width:1535px) {
+
+    .services-slider .product-card .product-title {
+        bottom: 66px;
+    }
 }
 @media screen and (min-width:1201px) {
     .slider-container {
