--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -9811,6 +9811,7 @@ form [type="submit"],
     font-size: 24px;
     line-height: 29.35px;
     margin-bottom: 12px;
+    color: var(--just-grey);
 }
 
 .services-tree .prod_container .single .desc .sub_page_title{
@@ -9819,6 +9820,7 @@ form [type="submit"],
     font-family: 'Commissioner', sans-serif;
     line-height: 22.4px;
     margin-top: 8px;
+    color: var(--just-grey);
 }
 .services-tree .prod_container .single .desc .sub_page_link.sub3_level {
     padding-left: 32px;
@@ -9830,7 +9832,7 @@ form [type="submit"],
 
 .services-tree .prod_container .single .desc a{
     font-size: 16px;
-    color: #333333;
+    color: var(--just-grey);
     text-decoration: underline;
     line-height: 22.4px;
     font-weight: 400;
